[gd_scene load_steps=5 format=1]

[ext_resource path="res://finances.gd" type="Script" id=1]
[ext_resource path="res://error_box.png" type="Texture" id=2]
[ext_resource path="res://vgg_font.fnt" type="BitmapFont" id=3]
[ext_resource path="res://line.png" type="Texture" id=4]

[node name="finances" type="Node2D"]

transform/pos = Vector2( 32.5076, 31.9236 )
script/script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]

transform/pos = Vector2( 3.78234, -1.43424 )
transform/scale = Vector2( 0.18739, 0.205592 )
texture = ExtResource( 2 )

[node name="label" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.275, 0.3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -19.0
margin/top = -25.0
margin/right = 159.0
margin/bottom = 23.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "Finances"
visible_characters = -1
percent_visible = 1.0

[node name="balance" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.275, 0.3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -29.0
margin/top = -15.0
margin/right = 98.0
margin/bottom = 27.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "Balance"
visible_characters = -1
percent_visible = 1.0

[node name="balance_amount" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.275, 0.3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 9.0
margin/top = -15.0
margin/right = 116.0
margin/bottom = 28.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "00000"
visible_characters = -1
percent_visible = 1.0

[node name="expenses_amount" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.275, 0.3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 9.0
margin/top = -2.0
margin/right = 119.0
margin/bottom = 39.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "000"
visible_characters = -1
percent_visible = 1.0

[node name="expenses" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.25, 0.3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -32.0
margin/top = -2.0
margin/right = 114.0
margin/bottom = 40.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "Expenses"
visible_characters = -1
percent_visible = 1.0

[node name="cash" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.275, 0.3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -30.0
margin/top = 13.0
margin/right = 70.0
margin/bottom = 55.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "Cash"
visible_characters = -1
percent_visible = 1.0

[node name="cash_amount" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.275, 0.3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 9.0
margin/top = 13.0
margin/right = 121.0
margin/bottom = 56.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "000"
visible_characters = -1
percent_visible = 1.0

[node name="line" type="Sprite" parent="."]

transform/pos = Vector2( 3.17141, 11.1013 )
transform/scale = Vector2( 0.315445, 0.107844 )
texture = ExtResource( 4 )

[node name="Control" type="Control" parent="."]

hint/tooltip = "A quick look at your finances."
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -33.0
margin/top = -31.0
margin/right = 41.0
margin/bottom = 28.0


